--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.12"
+    "nuxt": "3.0.0-rc.12",
+    "sass": "^1.55.0"
   }
 }
