--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --ext .ts,.js,.vue ."
+    "lint": "eslint --ext .ts,.js,.vue .",
+    "lint:style": "stylelint **/*.{css,scss,sass,html,vue}",
+    "lint:style:fix": "stylelint **/*.{css,scss,sass,html,vue} --fix"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
@@ -21,8 +23,15 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "3.0.0-rc.12",
+    "postcss": "^8.4.4",
+    "postcss-html": "^1.3.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
+    "stylelint": "^14.14.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-scss": "^8.0.0",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.8.4"
   }
 }
