--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .ts,.js,.vue .",
     "lint:style": "stylelint **/*.{css,scss,sass,html,vue}",
-    "lint:style:fix": "stylelint **/*.{css,scss,sass,html,vue} --fix"
+    "lint:style:fix": "stylelint **/*.{css,scss,sass,html,vue} --fix",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
@@ -22,6 +23,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "nuxt": "3.0.0-rc.12",
     "postcss": "^8.4.4",
     "postcss-html": "^1.3.0",
