--- a/package.json
+++ b/package.json
@@ -16,17 +16,26 @@
     "lint:fix": "eslint --ext .ts,.js,.vue . --fix",
     "lint:style": "stylelint **/*.{css,scss,sass,html,vue}",
     "lint:style:fix": "stylelint **/*.{css,scss,sass,html,vue} --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cz-commitlint": "^17.1.2",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "commitizen": "^4.2.5",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
+    "inquirer": "8",
     "lint-staged": "^13.0.3",
     "nuxt": "3.0.0-rc.12",
     "postcss": "^8.4.4",
