--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:style": "stylelint **/*.{css,scss,sass,html,vue}",
     "lint:style:fix": "stylelint **/*.{css,scss,sass,html,vue} --fix",
     "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "release": "standard-version"
   },
   "config": {
     "commitizen": {
@@ -42,6 +43,7 @@
     "postcss-html": "^1.3.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
+    "standard-version": "^9.5.0",
     "stylelint": "^14.14.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-scss": "^8.0.0",
