--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nuxtjs-with-typescript-example-template",
-  "version": "1.1.0",
-  "description": "Nuxt.js with TypeScript example template",
+  "name": "nuxt-with-typescript-example-template",
+  "version": "1.0.0",
+  "description": "Nuxt with typeScript example template",
   "private": true,
   "engines": {
     "node": ">=16.11.0"
