--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lint:style:fix": "stylelint **/*.{css,scss,sass,html,vue} --fix",
     "prepare": "husky install",
     "commit": "git-cz",
-    "release": "standard-version",
-    "git:push": "rm pnpm-lock.yaml &&  git push --follow-tags origin main"
+    "release": "standard-version"
   },
   "config": {
     "commitizen": {
