--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "husky": "^8.0.1",
     "inquirer": "8",
     "lint-staged": "^13.0.3",
-    "nuxt": "3.0.0-rc.12",
     "postcss": "^8.4.4",
     "postcss-html": "^1.3.0",
     "prettier": "^2.7.1",
@@ -49,6 +48,7 @@
     "stylelint-config-recommended-scss": "^8.0.0",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
-    "typescript": "^4.8.4"
+    "@nuxt/devtools": "latest",
+    "nuxt": "^3.7.1"
   }
 }
